--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag jhonesto:igpt
+      run: docker build . --file Dockerfile --tag jhonesto/igpt
     
     - name: Push to dockerhub registry
       run: |
